Fix spacing

--- a/src/app/components/layout.scss
+++ b/src/app/components/layout.scss
@@ -273,6 +273,7 @@
 }
 
 .tag-tray-menu-left {
+  padding-right: 5px;
   position: relative;
 }
 
@@ -285,10 +286,16 @@
   .show-frequency {
     display: block;
     font-size: 12px;
-    margin-top: 7px;
-    margin-bottom: 7px;
     text-align: right;
     width: 166px;
+  }
+
+  .manual-tag-tray-label {
+    margin-top: 18px;
+  }
+
+  .tag-sort-by-toggle, .show-frequency {
+    margin-top: 11px;
   }
 
   .tag-sort-by-toggle,
@@ -305,7 +312,7 @@
 
   .all-the-tags {
     overflow-y: scroll;
-    padding: 5px 15px;
+    padding: 15px 15px;
     width: 100%;
     
     &::-webkit-scrollbar {
@@ -328,7 +335,6 @@
     padding: 6px;
     position: absolute;
     right:0;
-    text-align: right;
     width: 155px;
 
     &::placeholder {
